Modified entity detail button styling

--- a/src/main/webapp/app/entities/userstory/userstory-detail.html
+++ b/src/main/webapp/app/entities/userstory/userstory-detail.html
@@ -39,11 +39,11 @@
 
     <button type="submit"
             ui-sref="{{ vm.previousState }}"
-            class="btn btn-info">
+            class="btn btn-info detail-button">
         <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
     </button>
 
-    <button type="button" ui-sref="userstory-detail.edit({id:vm.userstory.id})" class="btn btn-primary">
+    <button type="button" ui-sref="userstory-detail.edit({id:vm.userstory.id})" class="btn btn-primary detail-button">
         <span class="glyphicon glyphicon-pencil"></span>
         <span class="hidden-sm-down"> Edit</span>
     </button>
