--- a/src/main/webapp/app/entities/issue/issue-detail.html
+++ b/src/main/webapp/app/entities/issue/issue-detail.html
@@ -35,11 +35,11 @@
 
     <button type="submit"
             ui-sref="{{ vm.previousState }}"
-            class="btn btn-info">
+            class="btn btn-info detail-button">
         <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
     </button>
 
-    <button type="button" ui-sref="issue-detail.edit({id:vm.issue.id})" class="btn btn-primary">
+    <button type="button" ui-sref="issue-detail.edit({id:vm.issue.id})" class="btn btn-primary detail-button">
         <span class="glyphicon glyphicon-pencil"></span>
         <span class="hidden-sm-down"> Edit</span>
     </button>
