Added CSS file for requirement-detail template.
Added background color and height to comment board div.

--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -288,7 +288,7 @@
 
 
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3" style="background-color: #589BBE; height: 5000px">
         <div>
             <table class="table table-fixed well">
                 <thead>
